--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h1>Score : <span id="score">1</span></h1>
-        <img src="dice-1.jpeg" id="diceImg" alt="">
+        <img src="dice-1.png" id="diceImg" alt="">
         <button onclick="rollDice()">Roll a Dice</button>
     </div>
     <script src="script.js"></script>
